--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <div id="app">
-    <h2>{{ product }} are in stock</h2>
+    <ul>
+        <li v-for="(product,index) in products">
+            {{ product }}
+        </li>
+    </ul>
 </div>
 
 <script src="https://unpkg.com/vue"></script>
@@ -7,7 +11,11 @@
     const app = new Vue({
         el: "#app",
         data: {
-            product: "Boots"
+            products: [
+                "Boots",
+                "Jacket",
+                "Hiking Socks"
+            ]
         }
     })
 </script>
