--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div id="app">
     <ul>
         <li v-for="(product,index) in products">
-            {{ product }}
+            {{ product.quantity }} {{ product.name }}
         </li>
     </ul>
 </div>
@@ -11,11 +11,16 @@
     const app = new Vue({
         el: "#app",
         data: {
-            products: [
-                "Boots",
-                "Jacket",
-                "Hiking Socks"
-            ]
+            products: []
+        },
+        created() {
+            fetch('https://api.myjson.com/bins/74l63')
+            .then(response => response.json())
+            .then(
+                json => {
+                    this.products = json.products
+                }
+            )
         }
     })
 </script>
