--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
     <ul>
         <li v-for="(product,index) in products">
             {{ product.quantity }} {{ product.name }}
+            <span v-if="product.quantity === 0">
+                - OUT-OF-STACK
+            </span>
         </li>
     </ul>
+    <h2>Total Inventory: {{ totalProducts }}</h2>
 </div>
 
 <script src="https://unpkg.com/vue"></script>
@@ -12,6 +16,13 @@
         el: "#app",
         data: {
             products: []
+        },
+        computed: {
+            totalProducts() {
+                return this.products.reduce((sum, product) => {
+                    return sum + product.quantity
+                }, 0)
+            }
         },
         created() {
             fetch('https://api.myjson.com/bins/74l63')
