--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <div id="app">
     <ul>
         <li v-for="(product,index) in products">
-            {{ product.quantity }} {{ product.name }}
+            <input type="number" v-model.number="product.quantity" />
+            {{ product.name }}
             <span v-if="product.quantity === 0">
                 - OUT-OF-STACK
             </span>
+            <button @click="product.quantity += 1">ADD</button>
         </li>
     </ul>
     <h2>Total Inventory: {{ totalProducts }}</h2>
